fix: Update sidebar and header background colors for improved consistency in dark mode

--- a/packages/app/styles/_semantic-colors.scss
+++ b/packages/app/styles/_semantic-colors.scss
@@ -6,8 +6,8 @@
   --color-bg-muted: var(--mantine-color-dark-7);
   --color-bg-highlighted: var(--mantine-color-dark-4);
   --color-bg-success-highlighted: var(--mantine-color-green-9);
-  --color-bg-sidebar: var(--mantine-color-dark-8);
-  --color-bg-header: var(--mantine-color-dark-8);
+  --color-bg-sidebar: var(--mantine-color-dark-9);
+  --color-bg-header: var(--mantine-color-dark-9);
   --color-bg-hover: var(--mantine-color-dark-6);
   --color-bg-active: var(--mantine-color-dark-5);
   --color-bg-field: var(--mantine-color-dark-6);
